syntax = "proto3";

package pb.v1;

option java_package = "co.ledger.lama.bitcoin.interpreter.protobuf";

message Transaction {
  string id = 1;
  string hash = 2;
  string received_at = 3;
  int64 lock_time = 4;
  string fees = 5;
  repeated Input inputs = 6;
  repeated Output outputs = 7;
  Block block = 8;
  int32 confirmations = 9;
}

message Input {
  oneof value {
    DefaultInput default = 1;
    CoinbaseInput coinbase = 2;
  }
}

message DefaultInput {
  string output_hash = 1;
  int64 output_index = 2;
  int64 input_index = 3;
  string value = 4;
  string address = 5;
  string script_signature = 6;
  repeated string txinwitness = 7;
  string sequence = 8;
}

message CoinbaseInput {
  string coinbase = 1;
  int64 input_index = 2;
  string sequence = 3;
}

message Output {
  int64 output_index = 1;
  string value = 2;
  string address = 3;
  string script_hex = 4;
}

message Block {
  string hash = 1;
  int64 height = 2;
  string time = 3;
}
